--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="assest/bootstrap/css/bootstrap.min.css">
     <title>JavaScript Projects</title>
     <link rel="stylesheet" href="assest/css/style.css">
+    <link rel="stylesheet" href="assest/css/media.css">
 </head>
 
 <body>
     <div class="container">
         <h1 class="text-center mb-5">JavaScript Projects</h1>
         <div class="project-card">
-            <div class="d-flex">
-                <div class="col-4">
+            <div class="d-lg-flex">
+                <div class="col-smx-12 col-lg-4 ">
                     <img src="assest/images/calculater.png" alt="Calculator Project">
                 </div>
-                <div class="col-8 ms-4">
+                <div class="col-smx-12 col-lg-8 ms-lg-4">
                     <div class="project-info">
                         <h3 class="project-title">Calculator</h3>
                         <p class="project-desc">This project features a JavaScript-based calculator with basic
@@ -38,11 +39,11 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="d-flex">
-                <div class="col-4">
+            <div class="d-lg-flex">
+                <div class="col-smx-12 col-lg-4 ">
                     <img src="assest/images/ATM.png" alt="Calculator Project">
                 </div>
-                <div class="col-8 ms-4">
+                <div class="col-smx-12 col-lg-8 ms-lg-4">
                     <div class="project-info">
                         <h3 class="project-title">ATM</h3>
                         <p class="project-desc">This project is a simulation of an ATM built using JavaScript, providing
@@ -62,11 +63,11 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="d-flex">
-                <div class="col-4">
+            <div class="d-lg-flex">
+                <div class="col-smx-12 col-lg-4 ">
                     <img src="assest/images/addtocart.png" alt="Calculator Project">
                 </div>
-                <div class="col-8 ms-4">
+                <div class="col-smx-12 col-lg-8 ms-lg-4">
                     <div class="project-info">
                         <h3 class="project-title">Add To Cart</h3>
                         <p class="project-desc">The "Add to Cart" functionality allows users to seamlessly add products
@@ -86,11 +87,11 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="d-flex">
-                <div class="col-4">
+            <div class="d-lg-flex">
+                <div class="col-smx-12 col-lg-4 ">
                     <img src="assest/images/corona.png" alt="Calculator Project">
                 </div>
-                <div class="col-8 ms-4">
+                <div class="col-smx-12 col-lg-8 ms-lg-4">
                     <div class="project-info">
                         <h3 class="project-title">Corona Application</h3>
                         <p class="project-desc">A comprehensive web application to track COVID-19 statistics, safety
@@ -109,11 +110,11 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="d-flex">
-                <div class="col-4">
+            <div class="d-lg-flex">
+                <div class="col-smx-12 col-lg-4 ">
                     <img src="assest/images/rps.png" alt="Calculator Project">
                 </div>
-                <div class="col-8 ms-4">
+                <div class="col-smx-12 col-lg-8 ms-lg-4">
                     <div class="project-info">
                         <h3 class="project-title">Rock Paper Scissors</h3>
                         <p class="project-desc">Experience the classic game of Rock Paper Scissors, developed using
@@ -133,11 +134,11 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="d-flex">
-                <div class="col-4">
+            <div class="d-lg-flex">
+                <div class="col-smx-12 col-lg-4 ">
                     <img src="assest/images/speedometer.png" alt="Calculator Project">
                 </div>
-                <div class="col-8 ms-4">
+                <div class="col-smx-12 col-lg-8 ms-lg-4">
                     <div class="project-info">
                         <h3 class="project-title">Speedometer</h3>
                         <p class="project-description">This project features a dynamic Speedometer created using
@@ -157,11 +158,11 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="d-flex">
-                <div class="col-4">
+            <div class="d-lg-flex">
+                <div class="col-smx-12 col-lg-4 ">
                     <img src="assest/images/slider.png" alt="Calculator Project">
                 </div>
-                <div class="col-8 ms-4">
+                <div class="col-smx-12 col-lg-8 ms-lg-4">
                     <div class="project-info">
                         <h3 class="project-title">Custom Slider</h3>
                         <p class="project-description">Developed a custom JavaScript slider for dynamic content display.
@@ -180,11 +181,11 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="d-flex">
-                <div class="col-4">
+            <div class="d-lg-flex">
+                <div class="col-smx-12 col-lg-4 ">
                     <img src="assest/images/crued.png" alt="Calculator Project">
                 </div>
-                <div class="col-8 ms-4">
+                <div class="col-smx-12 col-lg-8 ms-lg-4">
                     <div class="project-info">
                         <h2 class="project-title">Students Array (CRUD)</h2>
                         <p class="project-description">A CRUD application for managing student records using JavaScript
@@ -203,11 +204,11 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="d-flex">
-                <div class="col-4">
+            <div class="d-lg-flex">
+                <div class="col-smx-12 col-lg-4 ">
                     <img src="assest/images/tictac.png" alt="Calculator Project">
                 </div>
-                <div class="col-8 ms-4">
+                <div class="col-smx-12 col-lg-8 ms-lg-4">
                     <div class="project-info">
                         <h3 class="project-title">Tic Tac Toe</h3>
                         <p class="project-description">Play Tic Tac Toe against a friend or the computer in this classic
@@ -226,11 +227,11 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="d-flex">
-                <div class="col-4">
+            <div class="d-lg-flex">
+                <div class="col-smx-12 col-lg-4 ">
                     <img src="assest/images/weather.png" alt="Calculator Project">
                 </div>
-                <div class="col-8 ms-4">
+                <div class="col-smx-12 col-lg-8 ms-lg-4">
                     <div class="project-info">
                         <h3 class="project-title">Weather Application</h3>
                         <p class="project-description">"Built using JavaScript, this Weather Application fetches
@@ -250,11 +251,11 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="d-flex">
-                <div class="col-4">
+            <div class="d-lg-flex">
+                <div class="col-smx-12 col-lg-4 ">
                     <img src="assest/images/task.png" alt="Calculator Project">
                 </div>
-                <div class="col-8 ms-4">
+                <div class="col-smx-12 col-lg-8 ms-lg-4">
                     <div class="project-info">
                         <h3 class="project-title">Task Management System</h3>
                         <p class="project-description">A Task Management System to efficiently manage tasks, assign
